News UAT/force-app/main/default/objects/Track_Update__c/Track_Update__c.object-meta.xml
<CustomObject>
    <description>Status report details</description>
    <label>Track Update</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Status Report Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>