News UAT/force-app/main/default/objects/Track_Update__c/fields/Accomplishments_this_Period__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments_this_Period__c</fullName>
    <description>Accomplishments this Period</description>
    <label>Accomplishments this Period</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>