News UAT/force-app/main/default/objects/Track_Update__c/fields/Planned_but_Not_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Planned_but_Not_Accomplished__c</fullName>
    <description>Planned, but Not Accomplished</description>
    <label>Planned, but Not Accomplished</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>