News UAT/force-app/main/default/objects/Track_Update__c/fields/Planned_for_Next_Period__c.field-meta.xml
<CustomField>
    <fullName>Planned_for_Next_Period__c</fullName>
    <description>Planned for Next Period</description>
    <label>Planned for Next Period</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>