News UAT/force-app/main/default/objects/Track_Update__c/fields/Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Status_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Status Report</description>
    <label>Status Report</label>
    <referenceTo>Status_Report__c</referenceTo>
    <relationshipLabel>Track Updates</relationshipLabel>
    <relationshipName>R00N80000002QnvWEAS</relationshipName>
    <type>Lookup</type>
</CustomField>