News UAT/force-app/main/default/objects/Track_Update__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <description>Track - referred to as Project Phase in Status Report output template</description>
    <label>Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Training and Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>