News UAT/force-app/main/default/objects/Track_Update__c/fields/Track_Status__c.field-meta.xml
<CustomField>
    <fullName>Track_Status__c</fullName>
    <label>Track Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Schedule</fullName>
            </value>
            <value>
                <fullName>Potential Risk</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>