News UAT/force-app/main/default/objects/Track_Update__c/fields/Track_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Track_Status_Icon__c</fullName>
    <description>Displays an image (red, yellow, green) for each possible track status.</description>
    <formula>IMAGE( 
CASE(    Track_Status__c  , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;track status indicator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track Status Icon</label>
    <type>Text</type>
</CustomField>