News UAT/force-app/main/default/objects/Track_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Track__c</columns>
    <columns>Status_Report__c</columns>
    <columns>Track_Status__c</columns>
    <columns>Track_Status_Icon__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>